## 更新日志文件
   
    2020.04.04 go版本
            1. 完成boltdb数据库的支持，编码格式使用gob;数据库保存位置为当前目录，命名为ebookdownloader.db

    2020.04.03 go版本
            1. 使用storm/v3库，添加boltdb的功能接口

    2020.03.30 go版本
	        1. 添加西西文学网下载源: http://www.xixiwx.com/
   
    2020.03.17 go版本
             1. 添加笔趣阁下载源：https://www.biquwu.cc/

    2020.03.12 go版本
	          1. 紧急修复gui中的致命错误
			  2. 给windows平台的cli,http-server添加图标(Linux,Mac不支持此方法)

    2020.03.08 go版本
	          1. 顶点小说下载源:booktxt.go 删除下载的txt文件中包含非小说的内容

    2020.03.07 go版本
              1. 修改进度条，使其能完整显示100%进度

    2020.03.06 go版本
              1. 把小说下载源独立成一个package ebookdownloader
              2. 添加小说下载源 booktxt.com
			  3. 更新版本到 1.7.4

    2020.03.04 go版本
               1. meta.json文件添加生成md5信息（对应mobi,azw3,txt,epub小说）
               2. meta.json添加生成uuid信息(对应每本小说，生成规则为UUID_V5)
               3. 添加新下载源 www.biduo.cc
               

    2020.03.03 go版本
               1. Travis-ci:在编译生成程序前，先进行go test测试当前平台是否有问题
			   2. Travis-ci:在编译和打包的时候打印信息
			   3. ebookdownloader:把生成mobi功能，单独成一个文件
			   4. test: go test完成后，删除生成的测试文件和目录

    2020.03.02 go版本
               1. 更新go-epub版本到v1.0.0,感谢@ystyle提交的修改
               2. 添加生成统一isbn功能（当同时生成mobi,azw3,epub的时候才能统一；如果分开生成，isbn码是不一样的）
    
    2020.03.01 go版本
                1. cli版本:添加检查最新版本功能 update_check功能
                2. cli版本：添加生成epub功能
                3. gui版本:添加生成epub功能
                4. http-server版本：添加生成epub功能
                5. gui版本：把字体嵌入到程序当中
                6. 更新版本到 1.7.3

    2020.02.29 go版本
                1. 对代码函数命名进行规范
                2. 更新测试用命ebookdl_test.go文件
                3. 更新下载章节进度条的格式
                4. 把日志文件单独分离出来
                5. 更新PowerShell脚本，添加生成编译版本的功能

      2020.02.18 go版本
                1. 添加PowerShell脚本，用于支持在win10上编译
  
      2020.02.16 go版本
                1. ebookdownloader库：windows平台 kindlegen运行时添加隐藏窗口功能
                2. gui:运行时，隐藏ebookdownloader_cli程序启动时的黑色窗口
                3. 更新版本到1.7.2
                -----