@@ -105,3 +105,6 @@ venv.bak/
 *.exe
 /tmp
 /outputs
+
+# boltdb file
+*.db
